# TND004-Lab-3b

detectionsystem/: CMakeLists.txt  README.md
detectionsystem/data/output/: segments-largeMystery.txt  segments-points1.txt  segments-points1423.txt  segments-points20.txt  segments-points200.txt  segments-points40.txt  segments-points5.txt  segments-points56.txt  segments-points6.txt
detectionsystem/data/output/lines-discovered/: lines-largeMystery.txt  lines-points1.txt  lines-points1423.txt  lines-points20.txt  lines-points200.txt  lines-points40.txt  lines-points5.txt  lines-points56.txt  lines-points6.txt  lines-points8.txt
detectionsystem/include/linesdiscoverysystem/: analyze.hpp  point.h  readfiles.h
detectionsystem/include/rendering/: window.h
detectionsystem/src/: lab3-part2.cpp
detectionsystem/src/linesdiscoverysystem/: analyze.cpp  point.cpp  readfiles.cpp
detectionsystem/src/rendering/: window.cpp
